--- a/BookStore/Content/Admin.scss
+++ b/BookStore/Content/Admin.scss
@@ -99,20 +99,19 @@ table.Grid {
     border-radius: 10px;
     border: thin solid white 1px;
     margin: 15px;
-   padding:10px;
+    padding: 10px;
 
     &:hover {
-        background-color:ActiveBorder;
+        background-color: ActiveBorder;
     }
-    
+
     a {
         text-decoration: none;
     }
 
     .description {
-        font-family:'Book Antiqua';
-        font-size:18px;
-
+        font-family: 'Book Antiqua';
+        font-size: 18px;
     }
 }
 
@@ -222,3 +221,25 @@ img {
     }
 }
 
+.file {
+    margin:15px;
+    background-color:whitesmoke;
+    border-radius: 10px;
+    border: solid 1px gray;
+    display: inline-block;
+    text-align: right;
+    padding:5px;
+    label {
+    }
+
+    input {
+        margin: 1px;
+        display: inline-block !important;
+        text-align: right;
+        color:InactiveCaptionText;       
+    }
+    button {
+        margin:3px;
+        display: inline-block;
+    }
+}
