--- a/BookStore/Content/Site1.css
+++ b/BookStore/Content/Site1.css
@@ -13,6 +13,8 @@
   color: White; }
   .header h1 {
     display: inline; }
+  .header input {
+    color: #353535; }
 
 footer {
   display: block; }
@@ -167,33 +169,37 @@ DIV.pager A.selected {
   margin: 8px 0 0 0 !important; }
 
 .bookheader {
-  margin: 8px;
+  margin: 2px;
   padding: 2px;
   border-bottom: 1px dotted;
   border-bottom-color: silver;
   border-radius: 10px;
   background-color: whitesmoke; }
-  .bookheader .signature .title {
-    font-family: 'Book Antiqua';
-    font-size: 16px;
-    color: InactiveCaptionText; }
-  .bookheader .signature .author {
-    font-family: 'Book Antiqua';
-    color: #666;
-    font-size: 14px; }
-  .bookheader .signature .rate {
-    float: right;
-    text-align: right;
-    font-size: 20px; }
+  .bookheader .signature {
+    margin-left: 1px; }
+    .bookheader .signature .title {
+      font-family: 'Book Antiqua';
+      font-size: 16px;
+      color: InactiveCaptionText; }
+    .bookheader .signature .author {
+      font-family: 'Book Antiqua';
+      color: #666;
+      font-size: 14px; }
+    .bookheader .signature .rate {
+      float: right;
+      text-align: right;
+      font-size: 20px; }
   .bookheader .like-rate .price {
     text-align: right;
     font-size: 12px; }
   .bookheader p {
     display: inline-flex;
-    margin-right: 15px; }
-  .bookheader .smallimage img {
-    max-height: 70px;
-    max-width: 70px; }
+    margin-right: 10px; }
+  .bookheader .smallimage {
+    margin-right: 0px; }
+    .bookheader .smallimage img {
+      max-height: 70px;
+      max-width: 70px; }
 
 .accordion {
   margin-bottom: 20px; }
@@ -218,5 +224,23 @@ DIV.pager A.selected {
 .accordion-inner {
   padding: 9px 15px;
   border-top: 1px solid #e5e5e5; }
+
+.user .accordion-toggle {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 16px;
+  text-decoration: none; }
+.user .name p {
+  display: inline-flex;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 45px; }
+.user .email p {
+  display: inline-flex;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 18px; }
+.user .favAvtors p {
+  display: inline-block; }
+.user .rateBook p {
+  margin-top: 30px;
+  text-align: center; }
 
 /*# sourceMappingURL=Site1.css.map */
