--- a/BookStore/Views/Shared/BookSummary.cshtml
+++ b/BookStore/Views/Shared/BookSummary.cshtml
@@ -1,6 +1,4 @@
-﻿@using System.Diagnostics.Eventing.Reader
-@using BookStore.DO.Entities
-@model BookStore.DO.Entities.Book
+﻿@model BookStore.DO.Entities.Book
 <div class="container-fluid book ">
     <div class="row itemb">
         <div class="col-md-10 col-lg-10 ">
@@ -40,7 +38,10 @@
                             {
                                 <li>
                                     <div class="commenterImage">
-                                        <img src="@Url.Content(Session["UserImage"].ToString())" />
+                                       
+                                        <a href="@Url.RouteUrl(new{action="Profile", controller="User",user=Session["UserName"]})">
+                                            <img src="@Url.Content(Session["UserImage"].ToString())"/>
+                                        </a>
                                     </div>
                                     <div class="commentText">
                                         <p class="">@comment.Context</p> <span class="date sub-text">@comment.DataCreate</span>
@@ -63,7 +64,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
         <div class="col-md-2 col-lg-2 image">
