--- a/BookStore/Views/Admin/FindBookAnnotation.cshtml
+++ b/BookStore/Views/Admin/FindBookAnnotation.cshtml
@@ -2,7 +2,7 @@
 @using BookStore.HtmlHelpers
 
 @{
-    ViewBag.Title = "FindBookAnnotation";
+    ViewBag.Title = "Find Information";
     Layout = null;
 }
 
