--- a/BookStore/Views/Admin/Edit.cshtml
+++ b/BookStore/Views/Admin/Edit.cshtml
@@ -26,13 +26,13 @@
                 </div>
                 <div class="editor-label">
                     @Ajax.ActionLink("Search Annotation", "FindBookAnnotation", "Admin",
-                  new { title = @Model.Title, lastName = @Model.BookAuthors.First().Last_Name, firstName = @Model.BookAuthors.First().First_Name, bookId = @Model.Book_ID },
-                new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" })
+                        new {title = @Model.Title, lastName = @Model.BookAuthors.First().Last_Name, firstName = @Model.BookAuthors.First().First_Name, bookId = @Model.Book_ID},
+                        new AjaxOptions {UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "POST"})
                 </div>
-                <div class="editor-field">@Html.EditorFor(b => b.Annotation, new { @class = "single-line" })</div>
+                <div class="editor-field">@Html.TextAreaFor(b => b.Annotation, new { @class = "text-box multi-line", id = "AreaText" })</div>
                 <div class="editor-label">
-                    @Ajax.ActionLink("Search Image", "FindBookImage", "Admin",
-                  new { title = @Model.Title, lastName = @Model.BookAuthors.First().Last_Name, firstName = @Model.BookAuthors.First().First_Name, bookId = @Model.Book_ID },
+                    @Ajax.ActionLink("Search Image", "FindImage", "Admin",
+                  new { title = @Model.Title, lastName = @Model.BookAuthors.First().Last_Name, firstName = @Model.BookAuthors.First().First_Name, Id = @Model.Book_ID },
                 new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" })
                 </div>
                 <div class="editor-field">@Html.EditorFor(b => b.Image_url, new { @class = "single-line" })</div>
