--- a/BookStore/Views/Shared/BookSummary.cshtml
+++ b/BookStore/Views/Shared/BookSummary.cshtml
@@ -39,20 +39,7 @@
                 <div class="detailBox">
                     <div class="actionBox">
                         <ul class="commentList">
-                            @foreach (var comment in @Model.Comments)
-                            {
-                                <li>
-                                    <div class="commenterImage">
-
-                                        <a href="@Url.RouteUrl(new {action = "Profile", controller = "User", user = Session["UserName"]})">
-                                            <img src="@Url.Content(Session["UserImage"].ToString())" />
-                                        </a>
-                                    </div>
-                                    <div class="commentText">
-                                        <p class="">@comment.Context</p> <span class="date sub-text">@comment.DataCreate</span>
-                                    </div>
-                                </li>
-                            }
+                            @{Html.RenderAction("GetComment", "Book", new {comments = @Model.Comments});}
                         </ul>
                         @*<div class="form-group">
                                 <textarea class="form-control" rows="4" placeholder="Your comments" id="areaCommment"></textarea>
