--- a/BookStore/Views/Shared/_AdminLayout.cshtml
+++ b/BookStore/Views/Shared/_AdminLayout.cshtml
@@ -6,6 +6,7 @@
     <link href="~/Content/Admin.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.css" rel="stylesheet" type="text/css" />
     <script src="~/scripts/jquery-1.9.1.min.js"></script>
+    <script src="~/Scripts/jquery-2.1.3.js"></script>
     <script src="~/scripts/jquery.unobtrusive-ajax.min.js"></script>
     @*<script src="~/scripts/jquery.fileupload.js"></script>*@
     <script src="~/scripts/addfield.js"></script>
