--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
     <div class="container-fluid">
         <div class="row header">
             <div class="col-md-3 logo">
-                <h1 id="logo" >Book Library</h1>
+                <a href="/"><h1 id="logo">Book Library</h1></a>
             </div>
             <div class="col-md-6">
                 <input id="typeahead" class="typeahead input-lg " placeholder="Поиск" type="text" data-provide="typeahead">
