--- a/BookStore/Views/User/Profile.cshtml
+++ b/BookStore/Views/User/Profile.cshtml
@@ -15,11 +15,11 @@
             </div>
         </div>
         <div class="col-md-4 col-lg-4 ">
-                <img src="@Url.Content(Model.Avatar_Url)" alt="Avatar"/>
+            <img src="@Url.Content(Model.Avatar_Url)" alt="Avatar" />
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
             <div class="accordion" id="accordion2">
                 <div class="accordion-group">
                     <div class="accordion-heading">
@@ -29,29 +29,47 @@
                     </div>
                     <div id="collapseOne" class="accordion-body collapse">
                         <div class="accordion-inner">
-                            @foreach (var book in Model.RatedBooks.Where(x=>x.IsSuggestion==false))
+                            @foreach (var book in Model.RatedBooks.Where(x => x.IsSuggestion == false))
                             {
-                                <div class="container-fluid">
-                                    <div class="row">
-                                        <div class="col-md-1 rateBook">
-                                            <p class="glyphicon glyphicon-heart-empty " aria-hidden="true">@book.RateValue</p>
-                                        </div>
-                                        <div class="col-md-11">
-                                            @{ Html.RenderPartial("BookHeader", book.Book); }
-                                        </div>
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-md-1 rateBook">
+                                        <p class="glyphicon glyphicon-heart-empty " aria-hidden="true">@book.RateValue</p>
+                                    </div>
+                                    <div class="col-md-11">
+                                        @{ Html.RenderPartial("BookHeader", book.Book); }
                                     </div>
                                 </div>
+                            </div>
+                            }
+                        </div>
+                    </div>
+
+                </div>
+                <div class="accordion-group">
+                    <div class="accordion-heading">
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#wishedBooks">
+                            Хочу почитать
+                        </a>
+                    </div>
+                    <div id="wishedBooks" class="accordion-body collapse">
+                        <div class="accordion-inner">
+                            @foreach (var book in Model.WishedBooks)
+                            {
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-md-11">
+                                        @{ Html.RenderPartial("BookHeader", book); }
+                                    </div>
+                                </div>
+                            </div>
                             }
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="col-md-5">
-            <div class="accordion" id="accordion1">
                 <div class="accordion-group">
                     <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo">
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
                             Любымые авторы
                         </a>
                     </div>
@@ -59,22 +77,21 @@
                         <div class="accordion-inner">
                             <div class="favAvtors">
                                 @foreach (var author in @Model.FavoriteAuthors)
-                                {
+                                    {
                                     <span>
                                         <p>@author.First_Name.Substring(0, 1)</p>
                                         @if (author.Middle_Name != null)
-                                        {
+                                            {
                                             <p>@author.Middle_Name.Substring(0, 1)</p>
-                                        }
+                                            }
                                         <p>@author.Last_Name</p>
                                     </span>
-                                }
+                                    }
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
